force-app/main/default/objects/Activity/fields/InCompleteListViewId__c.field-meta.xml
<CustomField>
    <fullName>InCompleteListViewId__c</fullName>
    <label>InComplete List View Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>