force-app/main/default/objects/Activity/fields/Lead_List__c.field-meta.xml
<CustomField>
    <fullName>Lead_List__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/o/&quot; &amp; ObjectListView__c &amp; &quot;/list?filterName=&quot; &amp; IF( OR(ISNULL(OverDueListViewId__c), ISBLANK(OverDueListViewId__c) ) , IF( DATEVALUE( CreatedDate ) == TODAY() , TodayListViewId__c, InCompleteListViewId__c) , OverDueListViewId__c ) , NameofLink__c , &quot;_self&quot;)</formula>
    <label>Lead List</label>
    <type>Text</type>
</CustomField>