force-app/main/default/objects/Activity/fields/NameofLink__c.field-meta.xml
<CustomField>
    <fullName>NameofLink__c</fullName>
    <label>Name of Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>