force-app/main/default/objects/Activity/fields/ObjectListView__c.field-meta.xml
<CustomField>
    <fullName>ObjectListView__c</fullName>
    <label>Object List View</label>
    <length>80</length>
    <type>Text</type>
</CustomField>