force-app/main/default/objects/Activity/fields/ObjectStatus__c.field-meta.xml
<CustomField>
    <fullName>ObjectStatus__c</fullName>
    <label>Object Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>