force-app/main/default/objects/Activity/fields/OverDueListViewId__c.field-meta.xml
<CustomField>
    <fullName>OverDueListViewId__c</fullName>
    <label>OverDueListViewId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>