force-app/main/default/objects/Activity/fields/TaskGrouping__c.field-meta.xml
<CustomField>
    <fullName>TaskGrouping__c</fullName>
    <label>Task Grouping</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>