force-app/main/default/objects/Activity/fields/TodayListViewId__c.field-meta.xml
<CustomField>
    <fullName>TodayListViewId__c</fullName>
    <label>Today List View Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>