force-app/main/default/objects/Activity/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Notification Lead</fullName>
            </value>
            <value>
                <fullName>Notification Case</fullName>
            </value>
            <value>
                <fullName>Lead Followup Note</fullName>
            </value>
            <value>
                <fullName>Overdue Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>